--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
   <nav id="pageNav">
   </nav>
   <main>
-    <h2>Page Title</h2>
+    <h2>Mr.Title</h2>
+    <ol>
+      <li>mint icecream</li>
+      <li>cookie dough</li>
+      <li>vanilla</li>
+    </ol>
   </main>
   <footer>
     Copyright info goes here
